# visual_altimeter

./: CMakeLists.txt  CMakeLists.txt~  nodelet_plugins.xml  nodelet_plugins.xml~  package.xml  package.xml~
include/visual_altimeter/: AdvancedVisualAltimeter.h  AdvancedVisualAltimeter.h~  BasicVisualAltimeter.h  BasicVisualAltimeter.h~  BasicVisualPlaneAltimeter.h  CameraRotationCalibrator.h  CameraRotationCalibrator.h~  CameraRotationCalibratorNodelet.h  CameraRotationCalibratorNodelet.h~  DataFusionAltimeter.h  RotationInvariantAltimeter.h  RotationInvariantAltimeter.h~  VisualAltimeter.h  (+3 more)
launch/: openni_and_altimeter_nodelet.launch  openni_and_altimeter_nodelet.launch~  openni_and_calibrator_nodelet.launch  openni_and_calibrator_nodelet.launch~  publish_static_transforms.launch  record_bag_file.launch  test.launch~  visual_altimeter_node.launch  visual_altimeter_node.launch~  visual_altimeter_nodelet.launch  visual_altimeter_nodelet.launch~
msg/: VisualHeightV1.msg~  VisualHeightV2.msg  VisualHeightV3.msg
src/: AdvancedVisualAltimeter.cpp  AdvancedVisualAltimeter.cpp~  BasicVisualAltimeter.cpp  BasicVisualAltimeter.cpp~  BasicVisualPlaneAltimeter.cpp  BasicVisualPlaneAltimeter.cpp~  CameraRotationCalibrator.cpp  CameraRotationCalibrator.cpp~  CameraRotationCalibratorNodelet.cpp  CameraRotationCalibratorNodelet.cpp~  DataFusionAltimeter.cpp  DataFusionAltimeter.cpp~  RotationInvariantAltimeter.cpp  RotationInvariantAltimeter.cpp~  VisualAltimeter.cpp  VisualAltimeter.cpp~  VisualAltimeterNodelet.cpp  VisualAltimeterNodelet.cpp~  visual_altimeter_node.cpp~
