<?xml version="1.0"?>
<package>
  <name>visual_altimeter</name>
  <version>0.0.0</version>
  <description>The visual_altimeter package</description>
  <maintainer email="hannesradmer@gmail.com">Johannes Radmer</maintainer>

  <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>nodelet</build_depend>

    <run_depend>libpcl-all</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>nodelet</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
